compiler/test-data/parser/types/errors/missing_accessor_type.frel
module types.errors.missing_accessor_type

import test.common.*

blueprint BadAccessor(accessor: Accessor) {
    text_editor { accessor }
}
